# internal/api/admin_queues.go
@@ -46,7 +46,6 @@ func getQueueStore(projectID string, projects *tenant.ProjectManager) (*queue.St
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Security     ProjectKey
 // @Param        body  body  object{queue=string,body=map[string]interface{}}  true  "Queue message"
 // @Success      201   {object}  map[string]string
 // @Failure      400   {object}  map[string]string
@@ -89,7 +88,6 @@ func (s *Server) handleQueueSend(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Security     ProjectKey
 // @Param        body  body  object{queue=string,limit=int}  true  "Receive request"
 // @Success      200   {object}  map[string]interface{}
 // @Failure      400   {object}  map[string]string
@@ -138,7 +136,6 @@ func (s *Server) handleQueueReceive(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
-// @Security     ProjectKey
 // @Param        body  body  object{queue=string,id=string}  true  "Delete request"
 // @Success      200   {object}  map[string]string
 // @Failure      400   {object}  map[string]string
